Fixed initial page load flicker on dark mode

--- a/frontend/style/components/Toggle.module.scss
+++ b/frontend/style/components/Toggle.module.scss
@@ -9,7 +9,7 @@
   padding: 0.35rem;
   position: relative;
   cursor: pointer;
-  transition: all 0.15s $tf;
+  transition: all $td $tf;
 }
 
 .slider {
@@ -21,7 +21,7 @@
   position: absolute;
   top: 0.35rem;
   left: 0.35rem;
-  transition: all 0.15s $tf;
+  transition: all $td $tf;
 }
 
 .check {
